padding and responsiveness fixes in all sections (except navbar on mobile screens).

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ button {
 }
 
 .boxes-container p {
-    max-width: 60vw;
+    max-width: 50vw;
     margin-top: 20px;
 }
 
@@ -141,7 +141,7 @@ button {
     }
 
     .boxes-container .box-container img { 
-        max-width: 60vw;
+        max-width: 50vw;
         height: auto;
 
     }
@@ -151,12 +151,32 @@ button {
         display: flex;
         flex-direction: column;
     }
-
-
-
 }
     
+@media screen and (max-width: 820px){
+    .quote-section {
+        padding: 50px;
+    
+    }
+    
+}
 
+@media screen and (max-width: 820px){
+    .CTA-section{
+        padding: 50px;
+    }
+    div.cta-flex-container{
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px;
+        text-align: center;
+    }
+
+    h3 {
+        padding-bottom: 10px;
+        font-size: 22;
+    }
+}
 
 
 
